# radar-backend-nuevo2

./: .env.example  .gitignore  FRONTEND_ANALYSIS.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  railway.toml
app/: celery_app.py  database.py  main.py  tasks.py
app/services/: ai_service.py  search_service.py
