[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.10"}
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
openai = "^1.106.1"
requests = "^2.32.5"
celery = "^5.5.3"
redis = "^6.4.0"
python-multipart = "^0.0.20"
openpyxl = "^3.1.5"
pandas = "^2.3.2"
aiohttp = "^3.11.10"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
